syntax="proto3";
package users;
option go_package="/.gen";

service UserService{
  rpc GetById(GetByIdReq) returns (GetByIdResp);
}

message GetByIdReq{
  int64 id=1;
}

message GetByIdResp{
  User user = 1;
}

message User{
  int64 id=1;
  string name=2;
}